[package]
name = "seedctl"
description = "A deterministic, auditable, and security-focused Bitcoin wallet generator."
repository = "https://github.com/williamcanin/seedctl"
version = "0.2.0"
authors = ["William C. Canin <william.costa.canin@gmail.com>"]
edition = "2024"

[package.metadata]
copyright_year = "2026"
maintainer = "William C. Canin"

[dependencies]
anyhow = "1.0.101"
bip39 = "2.2.2"
bitcoin = "0.32.8"
console = "0.16.2"
crossterm = "0.29.0"
dialoguer = "0.12.0"
hex = "0.4.3"
if-addrs = "0.15.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.10.9"

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
